kubernets/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: message-service-ingress
spec:
  rules:
  - host: message-service.domain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: message-service
            port:
              number: 80
